<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WatchWise</string>
    <string name="login">Iniciar Sesión</string>
    <string name="email_label">Email</string>
    <string name="email_hint">tuejemplo@gmail.com</string>
    <string name="password">Contraseña</string>
    <string name="password_hint">*******</string>
    <string name="login_btn">Iniciar Sesión</string>
    <string name="btn_register">Registrarse</string>
    <string name="separator">ó</string>
    <string name="register_user">Registro</string>
    <string name="names">Nombres</string>
    <string name="lastnames">Apellidos</string>
    <string name="phone_number">Telefono</string>
    <string name="description_btn_menu">Desplegar menú</string>
    <string name="general_recommendations">Recomendaciones generales</string>
    <string name="lorem_ipsum">El consumo eléctrico es la cantidad de energía que utilizan los aparatos y sistemas eléctricos durante un periodo de tiempo. Se mide en kilovatios-hora (kWh), una unidad que indica cuánta energía consume un dispositivo si funciona durante una hora con una potencia de un kilovatio.

        En los hogares, los equipos que más contribuyen al consumo son los refrigeradores, aires acondicionados, lavadoras, televisores, computadoras y los sistemas de iluminación\n\n\n


        Cada dispositivo tiene una potencia nominal, expresada en watts (W), que indica cuánta energía usa mientras está encendido. Cuanto mayor sea la potencia y más tiempo de uso, mayor será el consumo final.


        \n\n\nEl consumo eléctrico tiene un impacto directo en el costo de la factura mensual de energía, ya que las empresas suministradoras cobran por cada kWh utilizado. Además, un mayor uso de electricidad implica mayor demanda energética, lo que puede contribuir a la generación de gases de efecto invernadero cuando la energía proviene de fuentes no renovables.


        \nPara reducir el consumo y optimizar el uso de energía, se recomienda:


    \n\n* Utilizar electrodomésticos con etiqueta de eficiencia energética.


    \n\n* Desconectar dispositivos que no se estén usando.


    \n\n* Aprovechar la luz natural.


    \n\n* Implementar sistemas de iluminación LED


    \n\n* Regular temperaturas en aires acondicionados y neveras.


    \n\n* Monitorear el consumo con herramientas o aplicaciones especializadas.


    Comprender cómo se consume la energía en el hogar o en un negocio permite tomar decisiones más responsables, ahorrar dinero y contribuir a la sostenibilidad del entorno\n\n</string>
    <string name="start">Empezar</string>
    <string name="btn_perfil">Perfil</string>
    <string name="add_device">Agregar Dispositivo</string>
    <string name="delete_device">Eliminar Dispositivo</string>
    <string name="see_devices_added">Ver dispositivos agregados</string>
    <string name="graphic_1">Grafica consumo\ntotal/prod</string>
    <string name="graphic_2">Gráfica consumo dispositivo/mes</string>
    <string name="back">Atrás</string>
    <string name="model_device">Marca</string>
    <string name="watts">Cantidad que consume(Watt)</string>
    <string name="name_device">Nombre</string>
    <string name="type_device">Tipo de dispositivo</string>
    <string name="w_add_device">Registar dispositivo</string>
    <string name="add">Agregar</string>
    <string name="devices_added">Dispositivos agregados</string>
    <string name="recommends">Recomendaciones >></string>
    <string name="data">Datos</string>
    <string name="name">Name</string>
</resources>