<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_app"
    >



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_login"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name" >

        </ImageView>

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/btn_menu"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/description_btn_menu"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/background_btn_login"
        android:src="@drawable/ic_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cornerRadius="8dp">

    </ImageButton>

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/btn_menu"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/text_name"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/w_add_device"
            android:textSize="23sp"
            android:textColor="@color/black"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="25dp"
           >
        </TextView>

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:background="@color/white"
            android:textColorHint="@color/black"
            android:hint="@string/name_device"
            android:padding="12dp"
          >

        </EditText>

        <EditText
            android:id="@+id/edit_text_model"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:background="@color/white"
            android:hint="@string/type_device"
            android:padding="12dp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
           >

        </EditText>

        <EditText
            android:id="@+id/edit_text_wats"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:background="@color/white"
            android:hint="@string/watts"
            android:padding="12dp"
            android:textColorHint="@color/black"
            >

        </EditText>

        <EditText
            android:id="@+id/edit_text_type"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:background="@color/white"
            android:hint="@string/model_device"
            android:textColorHint="@color/black"
            android:padding="12dp"
            >

        </EditText>




    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/form"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:backgroundTint="@color/background_btn_login"
        >


    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>