<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_login"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name" >

        </ImageView>

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_menu_buttons"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginHorizontal="24dp"
        app:cardCornerRadius="36dp"
        app:cardBackgroundColor="@color/background_btn_login"
        app:layout_constraintTop_toBottomOf="@id/cardView_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
            android:gravity="center"
        android:padding="8dp">



        <Button
            android:id="@+id/btn_account"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_perfil"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:backgroundTint="@color/button_secondary_text"
            android:paddingVertical="12dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            app:cornerRadius="8dp"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btn_add_device"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/add_device"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingVertical="12dp"
            android:backgroundTint="@color/button_secondary_text"
            android:textSize="18sp"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            app:cornerRadius="8dp"
            android:layout_marginBottom="8dp" />


        <Button
            android:id="@+id/btn_delete_device"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_device"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:backgroundTint="@color/button_secondary_text"
            android:elevation="0dp"
            android:paddingVertical="12dp"
            android:textSize="18sp"
            app:strokeColor="@android:color/white"
            app:strokeWidth="2dp"
            app:cornerRadius="8dp"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btn_show_devices_added"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/see_devices_added"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:backgroundTint="@color/button_secondary_text"
            android:paddingVertical="12dp"
            android:textSize="18sp"
            app:strokeColor="@android:color/white"
            app:strokeWidth="2dp"
            app:cornerRadius="8dp"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btn_graphic_total"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/graphic_1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:backgroundTint="@color/button_secondary_text"
            android:paddingVertical="12dp"
            android:textSize="18sp"
            app:strokeColor="@android:color/white"
            app:strokeWidth="2dp"
            app:cornerRadius="8dp"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btn_grpahic_device_month"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/graphic_2"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:backgroundTint="@color/button_secondary_text"
            android:elevation="0dp"
            android:paddingVertical="12dp"
            android:textSize="18sp"
            app:strokeColor="@android:color/white"
            app:strokeWidth="2dp"
            app:cornerRadius="8dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/black"
        android:backgroundTint="@color/background_btn_login"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>