<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_app"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_login"
            android:contentDescription="@string/app_name" >

        </ImageView>

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/btn_menu"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/description_btn_menu"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/background_btn_login"
        android:src="@drawable/ic_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cornerRadius="8dp">

    </ImageButton>

    <LinearLayout
        android:id="@+id/linearLayout_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/cardView_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_menu"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general_recommendations"
            android:textSize="24sp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:lineSpacingExtra="4dp" >

        </TextView>

    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_btn_login"
        android:padding="12dp"
        android:text="@string/start"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_content"
       >

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>













