<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_app">


    <Button
        android:id="@+id/btn_recommendations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommends"
        android:textColor="@color/black"
        android:backgroundTint="@color/background_btn_login"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="32dp"
        app:cornerRadius="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:textSize="18sp">

    </Button>

    <ImageButton
        android:id="@+id/btn_menu"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/description_btn_menu"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/background_btn_login"
        android:src="@drawable/ic_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cornerRadius="8dp">

    </ImageButton>

    <TextView
        android:id="@+id/textView_graphTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graphic_2"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_recommendations"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp">

    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_graphic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_graphTittle"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="20dp"
        >
        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/ic_graphic"
            android:layout_marginHorizontal="20dp"
            >

        </ImageView>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/background_btn_login"
        android:textColor="@color/black"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_marginStart="30dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginTop="20dp"
        app:cornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@id/cardView_graphic"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>